chore: prune legacy public/pages, ignore generated projects.json, unify build, tighten Vercel rewrites

--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,9 @@
 {
   "rewrites": [
-    {
-      "source": "/((?!pages/.*).*)",
-      "destination": "/index.html"
-    }
-  ]
+    { "source": "/api/:path*",   "destination": "/api/:path*"   },
+    { "source": "/pages/:path*", "destination": "/pages/:path*" },
+    { "source": "/:path*",       "destination": "/index.html"   }
+  ],
+  "cleanUrls": true,
+  "trailingSlash": false
 }
