--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "node scripts/build.js",
+    "build": "node scripts/build.cjs",
     "preview": "vite preview"
   },
   "dependencies": {
