dev: generate projects.json before vite; fix build.cjs skip-vite flow

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "node scripts/build.cjs --skip-vite && vite",
     "build": "node scripts/build.cjs",
     "preview": "vite preview"
   },
