--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,9 @@
 {
-  "rewrites": [
-    { "source": "/api/:path*",   "destination": "/api/:path*"   },
-    { "source": "/pages/:path*", "destination": "/pages/:path*" },
-    { "source": "/:path*",       "destination": "/index.html"   }
-  ],
-  "cleanUrls": true,
-  "trailingSlash": false
+  "version": 2,
+  "functions": {
+    "api/**/*.js": { "runtime": "nodejs20.x" }
+  },
+  "routes": [
+    { "src": "^/api/(.*)", "dest": "/api/$1" }
+  ]
 }
