--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "lucide-react": "^0.539.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.8.0"
+    "react-router-dom": "^7.8.0",
+    "cheerio": "^1.0.0-rc.12",
+    "jszip": "^3.10.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
