--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,9 @@
 {
-  "version": 2
+  "version": 2,
+  "rewrites": [
+    {
+      "source": "/((?!api/|assets/|pages/|vite.svg|favicon.ico|_next/|static/).*)",
+      "destination": "/index.html"
+    }
+  ]
 }
