--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
   },
   "dependencies": {
     "@vercel/kv": "^3.0.0",
+    "cheerio": "^1.0.0-rc.12",
     "framer-motion": "^12.23.12",
+    "jszip": "^3.10.1",
     "lucide-react": "^0.539.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.8.0",
-    "cheerio": "^1.0.0-rc.12",
-    "jszip": "^3.10.1"
+    "react-router-dom": "^7.8.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
