--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@vercel/kv": "^3.0.0",
+    "@vercel/blob": "latest",
     "cheerio": "^1.0.0-rc.12",
     "framer-motion": "^12.23.12",
     "jszip": "^3.10.1",
